--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "faker": "^5.5.3",
+    "mongoose": "^6.8.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "session-file-store": "^1.5.0"
   }
 }
